language/move-lang/tests/move_check/typing/exp_list_resource_drop.exp
error: 

   ┌── tests/move_check/typing/exp_list_resource_drop.move:2:5 ───
   │
 7 │         (0, S{}, R<u64> {});
   │         ^^^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 2 │     resource struct R<T> {}
   │     -------- 0000000000000000000000000000000000000000000000000000000008675309.M.R<u64> is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/exp_list_resource_drop.move:2:5 ───
   │
 8 │         (0, S{}, Box<R<u64>> {});
   │         ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 2 │     resource struct R<T> {}
   │     -------- 0000000000000000000000000000000000000000000000000000000008675309.M.Box<0000000000000000000000000000000000000000000000000000000008675309.M.R<u64>> is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/exp_list_resource_drop.move:4:16 ───
   │
 9 │         (0, S{}, Box {});
   │         ^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 4 │     struct Box<T> {}
   │                - 0000000000000000000000000000000000000000000000000000000008675309.M.Box<_> is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/exp_list_resource_drop.move:9:18 ───
   │
 9 │         (0, S{}, Box {});
   │                  ^^^^^^ Could not infer this type. Try adding an annotation
   │

